--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
-title: Mon portfolio  
-subtitle: Démo de création d'un site de présentation de travaux perso pour les étudiants de DNMADE
+layout: menu
+title: Mon portfolio
+subtitle: Voici, mes créations que j'ai réalisé au cours de ma formation en DNMADE, en mention du Numérique.
 ---
