--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: home
+layout: home2
 title: Mon portfolio
 subtitle: Voici, mes créations que j'ai réalisé au cours de ma formation en DNMADE, en mention du Numérique.
 ---
