--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home3
-title: Mon portfolio
-subtitle: Voici, mes créations que j'ai réalisé au cours de ma formation en DNMADE, en mention du Numérique.
+title: DN3-P3 PORTFOLIO
+subtitle: Voici, mes créations que j'ai réalisées au cours de ma formation en DNMADE (Diplôme National des Métiers d'Art et du Design Européen), en mention numérique au lycée des métiers Le Paraclet, à Quimper.
 ---
